# myEmbodiedVLA-agent

./: .gitignore  README-architecture.md  README.md  pyproject.toml  start-study-agent.ps1  study_agent_cli.py
.study-agent/: config.json  config_example.json  profile.json
docs/: README.md  architecture.md  graph-rag-architecture.md  issues-and-next-steps.md  paper-concept-structural-mapping.md  refactor-assessment.md  roadmap-detailed.md  roadmap.md  schema-v1.md  vision-and-learning-loop.md
notes/: ACoT-VLA-architecture-study.md  LeWorldModel.md  VLA-Adapter-bridge-attention-code-analysis.md  acot-vla-evidence-check.md  acot-vla-role-aware-check.md  reconvla-evidence-check.md  reconvla-role-aware-check.md  vla-adapter-evidence-check.md  vla-adapter-role-aware-check.md  wav-evidence-check.md  wav-role-aware-check.md
src/study_agent/: __init__.py  card_models.py  cleanup.py  cli.py  codex_client.py  composer.py  config.py  copilot.py  github_check.py  graph_rank.py  ingest.py  models.py  paper_understanding.py  paper_workspace.py  parser_backend.py  pdf.py  pipeline.py  planner.py  profile.py  progress.py  prompt_builder.py  qa_models.py  quality_gate.py  runtime_env.py  second_pass.py  session_store.py  taste_memory.py  tui.py  workspace_models.py  zotero.py  (+1 more)
tests/: test_ast_regression.py  test_cleanup.py  test_codex_client.py  test_config.py  test_copilot_workflow.py  test_github_check.py  test_graph_interfaces.py  test_ingest_errors.py  test_paper_workspace.py  test_pdf.py  test_pipeline.py  test_profile.py  test_progress.py  test_repo_evidence.py  test_runtime_env.py  test_second_pass.py  test_tui.py  test_zotero.py
(+21 files in other folders)
